2013-10-05  Robert Krause  <Ruport@web.de>

 * Initial Changelog
 * added columns source port, destination port, flags
 * columns are resizeable now
 * removed external GUI (netmate.ui)
 * minor fixes


